[gd_scene load_steps=3 format=3 uid="uid://c3682crnlgnbg"]

[ext_resource type="Script" uid="uid://jduf30sg7oup" path="res://02.sending-and-receiving-data/LoginScreen.gd" id="1_hbkdi"]

[sub_resource type="LabelSettings" id="LabelSettings_oymwe"]
font_color = Color(1, 0.2, 0.2, 1)

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbkdi")
avatar_screen_scene = "res://02.sending-and-receiving-data/AvatarScreen.tscn"

[node name="UserLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 72.0
offset_right = 45.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "username"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 128.0
offset_right = 45.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "pasword"
alignment = 1
secret = true

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_oymwe")
horizontal_alignment = 1

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = 135.0
offset_right = 120.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"

[connection signal="text_submitted" from="UserLineEdit" to="." method="_on_UserLineEdit_text_submitted"]
[connection signal="text_submitted" from="PasswordLineEdit" to="." method="_on_PasswordLineEdit_text_submitted"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
